[package]
name = "authentik"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true
default-run = "authentik"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
shadow-rs.workspace = true

authentik-server.workspace = true
authentik-worker.workspace = true

[build-dependencies]
shadow-rs.workspace = true

[lints]
workspace = true
