[package]
name = "authentik"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
argh.workspace = true
eyre.workspace = true
color-eyre.workspace = true

authentik-config.workspace = true
authentik-server.workspace = true
authentik-worker.workspace = true

# Because of the async runtime, we really want panics to cause an abort, otherwise
# the binary can keep on running as a ghost
[profile.dev]
panic = "abort"
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
debug = 2

[lints]
workspace = true
