[package]
name = "authentik-config"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
config.workspace = true
glob.workspace = true
miette.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true

[lints]
workspace = true
