[package]
name = "authentik-config"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
config.workspace = true
eyre.workspace = true
glob.workspace = true
ipnet.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
