[package]
name = "authentik-db"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
eyre.workspace = true
sea-orm.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

authentik-config.workspace = true

[lints]
workspace = true
