[package]
name = "authentik-lib"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
eyre.workspace = true
tracing.workspace = true

[lints]
workspace = true
