[package]
name = "authentik-server"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
argh.workspace = true
axum.workspace = true
axum-reverse-proxy.workspace = true
axum-server.workspace = true
eyre.workspace = true
hyper-unix-socket.workspace = true
hyper-util.workspace = true
nix.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

authentik-config.workspace = true

[lints]
workspace = true
