[package]
name = "authentik-server"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
argh.workspace = true
axum.workspace = true
axum-server.workspace = true
eyre.workspace = true
http-body-util.workspace = true
hyper-unix-socket.workspace = true
hyper-util.workspace = true
nix.workspace = true
rcgen.workspace = true
rustls.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

authentik-axum.workspace = true
authentik-config.workspace = true
authentik-db.workspace = true
authentik-proxy.workspace = true

[lints]
workspace = true
