[package]
name = "authentik-tokio"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
eyre.workspace = true
futures.workspace = true
hyper.workspace = true
hyper-util.workspace = true
pin-project-lite.workspace = true
ppp.workspace = true
smallvec.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
