[package]
name = "authentik-tokio"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
eyre.workspace = true
pin-project-lite.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
