[package]
name = "authentik-worker"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
argh.workspace = true
axum.workspace = true
axum-server.workspace = true
eyre.workspace = true
nix.workspace = true
pyo3.workspace = true
signal-hook.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
