[package]
name = "docsmg"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish = false

[dependencies]
eyre.workspace = true
clap = { version = "4.5.59", features = ["derive", "env"] }
colored = "3.1.1"
dotenv = "0.15.0"
regex = "1.12.3"

[lints]
workspace = true
