[package]
name = "docsmg"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish = false

[dependencies]
eyre.workspace = true
clap.workspace = true
colored.workspace = true
dotenv.workspace = true
regex.workspace = true

[lints]
workspace = true
